# OpenRailChart

./: .gitignore  InstallNotes.md  ORM_Icons.md  README.md  index.html  pyproject.toml
.github/workflows/: assemble.yml
data/: great-britain-latest_railway_multilinestrings.geojson  great-britain-latest_railway_points.geojson
docs/: ORM_Icons.md
england/buffer_stops/: bedfordshire_latest_railway_buffer_stop.geojson  berkshire_latest_railway_buffer_stop.geojson  bristol_latest_railway_buffer_stop.geojson  buckinghamshire_latest_railway_buffer_stop.geojson  cambridgeshire_latest_railway_buffer_stop.geojson  cheshire_latest_railway_buffer_stop.geojson  cornwall_latest_railway_buffer_stop.geojson  cumbria_latest_railway_buffer_stop.geojson  derbyshire_latest_railway_buffer_stop.geojson  devon_latest_railway_buffer_stop.geojson  dorset_latest_railway_buffer_stop.geojson  durham_latest_railway_buffer_stop.geojson  east_sussex_latest_railway_buffer_stop.geojson  east_yorkshire_with_hull_latest_railway_buffer_stop.geojson  england_latest_railway_buffer_stop.geojson  essex_latest_railway_buffer_stop.geojson  gloucestershire_latest_railway_buffer_stop.geojson  greater_london_latest_railway_buffer_stop.geojson  (+30 more)
javascript/: demo.js
javascript/leaflet/: leaflet.css  (+1 more)
layers/: crossing_markers.js  mainline_routes.js  rail_routes.js  signal_markers.js  signal_markers_json.js  tram_routes.js
maps/: demo.js
parsers/: json_to_js.py
testing/: dummy_nodes.js  dummy_nodes.py  test.geojson
type_sets/: buffer_icon.js  ped_crossing_icon.js  station_icon.js  tram_stop_icon.js
(+494 files in other folders)
