[tool.poetry]
name = "openrailchart"
version = "0.1.0"
description = "Python Module for OpenRailChart project"
authors = ["Kristian Zarebski <krizar312@gmail.com>"]
license = "GPL-v3"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
wget = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
osm2raildat = "openrailchart.extraction:convert_all_data_from_file"
osmfetch = "openrailchart.extraction:fetch_geofabrik_data"